--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=amigospremia
+spring.application.name=${APP_NAME:amigospremiaservice}
 
 spring.datasource.url=jdbc:postgresql://100.70.30.30:5432/amigospremia
 spring.datasource.username=appuser
