variavel de ambiente para o endereço do banco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=${APP_NAME:amigospremiaservice}
 
-spring.datasource.url=jdbc:postgresql://100.70.30.30:5432/amigospremia
+spring.datasource.url=jdbc:postgresql://${DB_HOST:100.70.30.30}:${DB_PORT:5432}/${DB_NAME:amigospremia}
 spring.datasource.username=appuser
 spring.datasource.password=apppassword
 
